manifests/cluster/open-webui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: open-webui
spec:
  selector:
    app: open-webui
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
