manifests/cluster/open-webui/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: open-webui
  namespace: open-webui
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`openwebui.cowlab.org`)
      kind: Rule
      services:
        - name: open-webui
          port: 8080
